[package]
name = "jasn"
version = "0.1.0"
edition = "2024"
authors = ["Akash Rakholia"]
description = "A Rust library for parsing and formatting JASN (Just Another Serialization Notation)"
repository = "https://github.com/arakholia/jasn-rs"
license = "MIT"
keywords = ["json", "yaml", "parser", "serialization", "deserialization", "format"]
categories = ["encoding"]

[dependencies]
base64 = "0.22"
pest = "2.7"
pest_derive = "2.7"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }

[dev-dependencies]
rstest = "0.23"
