[workspace]
members = ["jaml", "jasn", "jasn-core"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Akash Rakholia"]
license = "MIT"
repository = "https://github.com/arakholia/jasn-rs"

[workspace.dependencies]
jasn-core = { version = "0.2.0", path = "jasn-core" }
