[package]
name = "jasn-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core data types for JASN and JAML serialization formats"
keywords = ["json", "yaml", "serialization", "deserialization"]
categories = ["encoding", "data-structures"]

[features]
default = ["serde"]
serde = ["dep:serde", "time/serde"]

[dependencies]
base64 = "0.22"
serde = { version = "1.0", optional = true }
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }

[dev-dependencies]
rstest = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
