[package]
name = "jasn"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A Rust library for parsing and formatting JASN (Just Another Serialization Notation)"
keywords = ["json", "yaml", "parser", "serialization", "deserialization", "format"]
categories = ["encoding"]

[[bin]]
name = "jasn"
path = "src/bin/jasn.rs"

[features]
default = ["serde"]
serde = ["dep:serde", "jasn-core/serde"]

[dependencies]
base64 = "0.22"
jasn-core = { path = "../jasn-core" }
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1.0", optional = true }
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
rstest = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
time = { version = "0.3", features = ["formatting", "parsing", "macros", "serde"] }
