[package]
name = "jasn"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A Rust library for parsing and formatting JASN (Just Another Serialization Notation)"
keywords = ["json", "yaml", "parser", "serialization", "deserialization"]
categories = ["encoding"]

[[bin]]
name = "jasn"
path = "src/bin/jasn.rs"
required-features = ["cli"]

[features]
default = ["serde"]
serde = ["dep:serde", "jasn-core/serde"]
cli = ["dep:clap", "dep:clap_complete", "dep:anyhow"]

[dependencies]
anyhow = { version = "1.0", optional = true }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"], optional = true }
clap_complete = { version = "4.5", optional = true }
jasn-core = { path = "../jasn-core" }
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1.0", optional = true }
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
rstest = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
time = { version = "0.3", features = ["formatting", "parsing", "macros", "serde"] }
